--- a/skin/layout.haml
+++ b/skin/layout.haml
@@ -16,7 +16,7 @@
           %h1
             Coding Thougths
           %h2.tagline
-            On software development, or not
+            about programming.
       = content
       
       #footer.clearfix
