--- a/skin/article.haml
+++ b/skin/article.haml
@@ -3,13 +3,15 @@
     %a.sha-version{ href: "/#{article.version}/#{article.name}" } Static Version
   %h1
     %a{href: "/" + article.name}&= article.title
+  %h5
+    By #{article.author.name} on #{formatDate(article.date, "%Y.%m.%d")}
   = markdownEncode(article.markdown)
   %hr{style:"clear:both"}
   #disqus_thread.body
   :script
-    var disqus_url = "http://howtonode.org/#{article.name}";
-  %script(src="http://disqus.com/forums/howtonodeorg/embed.js" type="text/javascript")
-  %a(href="http://disqus.com/forums/howtonodeorg/?url=ref")
+    var disqus_url = "http://blog.acmarques.com/#{article.name}";
+  %script(src="http://disqus.com/forums/acmarques/embed.js" type="text/javascript")
+  %a(href="http://disqus.com/forums/acmarques/?url=ref")
     View the discussion thread.
   %a.dsq-brlink(href="http://disqus.com")
     blog comments powered by
@@ -24,106 +26,52 @@
           query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&amp;';
         }
       }
-      document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/howtonodeorg/get_num_replies.js' + query + '"></' + 'script>');
+      document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/acmarques/get_num_replies.js' + query + '"></' + 'script>');
     })();
 
 
 #sidebar
-  .aside.clearfix
-    %h4 About the Author
-    %img.headshot{src: gravitar(author.email) }
-    %dl
-      %dt Name:
-      %dd&= author.name
-    :if author.github
-      %dl
-        %dt Github:
-        %dd= github(author.github)
-    :if author.bitbucket
-      %dl
-        %dt BitBucket:
-        %dd= bitbucket(author.bitbucket)
-    :if author.twitter
-      %dl
-        %dt Twitter:
-        %dd= twitter(author.twitter)
-    :if author.location
-      %dl
-        %dt Location:
-        %dd&= author.location
-    :if author.homepage
-      %dl
-        %dt Links:
-        %dd
-          %a{href: author.homepage} Homepage
-
-  .aside
-    %h4
-      About this Article
-    :if article.date
-      %dl{title: article.date}
-        %dt
-          Date Released:
-        %dd
-          &= formatDate(article.date, "%l %F %j, %Y")
-    :if article.lastUpdated
-      %dl{title: article.lastUpdated}
-        %dt
-          Last Updated:
-        %dd
-          &= formatDate(article.lastUpdated, "%l %F %j, %Y")
-
-    :if article.node
-      %dl
-        %dt
-          Node Version:
-        %dd
-          %a{ href: "http://github.com/ry/node/tree/" + article.node }
-            node #{article.node}
-
-    :if article.dependencies
-      %dl
-        %dt
-          Dependency Versions:
-        %dd
-          %ul
-            :each dependency in article.dependencies
-              %li
-                %a{ href: "http://github.com/creationix/haml-js/tree/8ea2df3a90ff488ed253d5872e0f4a387f393e5d" }
-                  haml-js v0.2.2
-
-    :if article.uniqueSnippets
-      %dl
-        %dt
-          Code Samples:
-        %dd
-          %ul
-            :each base, snippet in article.uniqueSnippets
-              %li
-                %a{ href: snippet.filename}
-                  &= base
-
-    %dl
-      %dt
-        Revisions:
-      %dd
-        %ul
-          :each version, stat in article.log
-            %li{title: stat.message}
-              %a{ href: "/#{version}/#{article.name}" }
-                &= new Date(stat.date).toUTCString()
-
-  :if article.related && article.related.length > 0
+  :if article.categories != undefined
     .bubble
-      %h4
-        Other Articles by this Author
+      %h3
+        Categories
       %ul
-        :each related in article.related
+        :each category in article.categories.split(',')
           %li
-            %a{href: "/" + related.name}&=related.title
-            :if related.node
-              %span.versiontag&= related.node
-
-  .bubble= markdownEncode(description)
-  %a.sponsor{href:"http://mediatemple.net/"}
-    %img{src:"mtbadge.jpg", alt:"(mt) mediatemple", title:"Hosting donated by Media Temple"}
+            %a{href: "/category/" + category.trim() }&= category.trim()
+  .bubble{style: "background: #E8E8E8 !important"}
+    :script
+      new TWTR.Widget({
+        version: 2,
+        type: 'profile',
+        rpp: 4,
+        interval: 6000,
+        width: 300,
+        height: 300,
+        theme: {
+          shell: {
+            background: '#e8e8e8',
+            color: '#3e3e3e'
+          },
+          tweets: {
+            background: '#ffffff',
+            color: '#000000',
+            links: '#21749b'
+          }
+        },
+        features: {
+          scrollbar: false,
+          loop: false,
+          live: false,
+          hashtags: true,
+          timestamp: true,
+          avatars: false,
+          behavior: 'all'
+        }
+      }).render().setUser('acmarques').start();   
+  .bubble
+    %h3
+      Links
+    %ul
+      %li
+        %a{href: "http://www.locaweb.com.br" }Locaweb      
