--- a/skin/layout.haml
+++ b/skin/layout.haml
@@ -2,8 +2,8 @@
 %html(lang="en" xmlns="http://www.w3.org/1999/xhtml")
   %head
     %meta(http-equiv="content-type" content="text/html; charset=UTF-8")
-    %title #{(title ? title + " - " : "")}Coding Thougths
-    %meta(name="description" content="Thougths about coding and other stuff.")
+    %title #{(title ? title + " - " : "")}Random Thougths
+    %meta(name="description" content="Random thougths about software development.")
     %link(href="/site.css?v2" rel="stylesheet")
     %link(href="/print.css" rel="stylesheet" media="print")
     %link(rel="alternate" type="application/rss+xml" title="RSS 2.0" href="/feed.xml")
@@ -14,11 +14,10 @@
       #header
         %a{href: "/"}
           %h1
-            Coding Thougths
+            Random Thoughts
           %h2.tagline
-            about programming.
+            about software development.
       = content
       
       #footer.clearfix
-        %p Site Design and code is &copy; 2010 to Tim Caswell under the MIT license. Content and articles are copyrighted to the individual authors. All code snippets used in the examples are in the public domain.
         %p Wheat running on node #{process.version}
