--- a/skin/article.haml
+++ b/skin/article.haml
@@ -9,7 +9,7 @@
   %hr{style:"clear:both"}
   #disqus_thread.body
   :script
-    var disqus_url = "http://blog.acmarques.com/";
+    var disqus_url = "http://blog.acmarques.com/#{article.name}";
   %script(src="http://disqus.com/forums/acmarques-random-thoughts/embed.js" type="text/javascript")
   %a(href="http://disqus.com/forums/acmarques-random-thoughts/?url=ref")
     View the discussion thread.
