Publishing deploying_node_with_nginx_and_god

--- a/skin/article.haml
+++ b/skin/article.haml
@@ -74,7 +74,9 @@
       Links
     %ul
       %li
-        %a{href: "http://www.locaweb.com.br" }Locaweb    
+        %a{href: "http://www.locawebers.com.br/" }Locawebers
+      %li
+        %a{href: "http://howtonode.org" }How to Node  
         
 :script
   var disqus_shortname = 'acmarques-random-thoughts';
