just adding a blank space

--- a/skin/article.haml
+++ b/skin/article.haml
@@ -17,7 +17,7 @@
   %a.dsq-brlink(href="http://disqus.com")
     blog comments powered by
     %span.logo-disqus
-      Disqus
+      &nbsp;Disqus
   :script
     (function() {
       var links = document.getElementsByTagName('a');
