Adding site verification

--- a/skin/layout.haml
+++ b/skin/layout.haml
@@ -2,8 +2,9 @@
 %html(lang="en" xmlns="http://www.w3.org/1999/xhtml")
   %head
     %meta(http-equiv="content-type" content="text/html; charset=UTF-8")
-    %title #{(title ? title + " - " : "")}Random Thougths
-    %meta(name="description" content="Random thougths about software development.")
+    %title #{(title ? title + " - " : "")}Random Thoughts
+    %meta(name="description" content="Random thoughts about software development.")
+    %meta(name="google-site-verification" content="kN9K6ycBrdjEdq8kFOHRa88m0IUmNtoBZ-4JiaJwWXg")
     %link(href="/site.css?v2" rel="stylesheet")
     %link(href="/print.css" rel="stylesheet" media="print")
     %link(rel="alternate" type="application/rss+xml" title="RSS 2.0" href="/feed.xml")
