--- a/skin/article.haml
+++ b/skin/article.haml
@@ -71,12 +71,16 @@
       }).render().setUser('acmarques').start();   
   .bubble
     %h3
-      Links
+      Blogs
     %ul
       %li
         %a{href: "http://www.locawebers.com.br/" }Locawebers
       %li
-        %a{href: "http://howtonode.org" }How to Node  
+        %a{href: "http://howtonode.org" }How to Node 
+      %li
+        %a{href: "http://giovanigenerali.com/" }Giovani Generali
+      %li
+        %a{href: "http://zenmachine.wordpress.com/" }the zen machine  
         
 :script
   var disqus_shortname = 'acmarques-random-thoughts';
