--- a/skin/index.haml
+++ b/skin/index.haml
@@ -58,9 +58,13 @@
           %a{href: "/" + article.name}&=article.title  
   .bubble
     %h3
-      Links
+      Blogs
     %ul
       %li
         %a{href: "http://www.locawebers.com.br/" }Locawebers
       %li
-        %a{href: "http://howtonode.org" }How to Node        
+        %a{href: "http://howtonode.org" }How to Node 
+      %li
+        %a{href: "http://giovanigenerali.com/" }Giovani Generali
+      %li
+        %a{href: "http://zenmachine.wordpress.com/" }the zen machine
